--- a/package.json
+++ b/package.json
@@ -50,6 +50,9 @@
     "core-js": "^3.8.3",
     "flag-icon-css": "^3.5.0",
     "font-awesome": "^4.7.0",
+    "html2canvas": "^1.0.0-rc.7",
+    "jspdf": "^2.3.0",
+    "jspdf-autotable": "^3.5.14",
     "ng2-charts": "^2.4.2",
     "ngx-bootstrap": "^6.2.0",
     "ngx-perfect-scrollbar": "^10.1.0",
