--- a/angular.json
+++ b/angular.json
@@ -35,6 +35,7 @@
             "scripts": [],
             "allowedCommonJsDependencies": [
               "chart.js",
+              "chart1.js",
               "classnames",
               "core-js",
               "raf",
